--- a/README
+++ b/README
@@ -1,3 +1,7 @@
 WEB303 Assignments
 Chantal Monette
 W0800871
+
+Each assignment will have its own branch.
+
+For example: Assignment 1 is in a branch called 'Assignment-1'
